# FirstLLM

./: .gitignore  CMakeLists.txt  EnvironmentSetup.md  FirstLLM.md  ProgressLog.md  ProjectNodes.md  agent.md
examples/: firstllm_info.cpp
include/firstllm/: firstllm.h
include/firstllm/backends/: cpu_backend.h  cuda_backend.h
include/firstllm/core/: backend.h  status.h  tensor.h
include/firstllm/kernels/cpu/: add.h  matmul.h  rms_norm.h  softmax.h
include/firstllm/model/: gguf_reader.h  kv_cache.h  tiny_llama.h
include/firstllm/runtime/: engine.h  generator.h
scripts/: check-env.ps1  firstllm-env.ps1
src/backends/cpu/: cpu_backend.cpp
src/backends/cuda/: cuda_backend.cpp
src/core/: backend.cpp  status.cpp  tensor.cpp
src/kernels/cpu/: add.cpp  matmul.cpp  rms_norm.cpp  softmax.cpp
src/model/: gguf_reader.cpp  kv_cache.cpp  tiny_llama.cpp
src/runtime/: engine.cpp  generator.cpp
tests/: backend_test.cpp  cpu_add_test.cpp  cpu_backend_test.cpp  cpu_matmul_test.cpp  cpu_rms_norm_test.cpp  cpu_softmax_test.cpp  cuda_backend_test.cpp  engine_test.cpp  generator_test.cpp  gguf_reader_test.cpp  kv_cache_test.cpp  smoke.cpp  status_test.cpp  tensor_test.cpp  tiny_llama_test.cpp
